public/css/chat.css
.content,body,html {
    height: 95%;
}

.left {
    float: left;
    width: 25%;
    height: 100%;
    border-style: solid;
    border-right: thick double #B1D9E5;
    border-left: thick double #B1D9E5;
}

.right {
    float: left;;
    width: 25%;
    height: 100%;
    border-style: solid;
    border-right: thick double #B1D9E5;
    border-left: thick double #B1D9E5;
    display: flex;
    flex-direction:column;
}

.find_window{
    overflow-y: scroll;
    flex-grow: 1;
}

.middle {
  position: relative;
  float : left;
  width : 50%;
  height : 100%;
  border-style: solid;
  border-right: thick double #B1D9E5;
  border-left: thick double #B1D9E5;
}

.chat_window{
  overflow-y: scroll;
  height : 100%;
}

.chatForm{
  position: absolute;
  bottom : 0;
  background : blue;
  width : 100%;
}

.chatForm form{
  width: 100%;
}

.chatForm form input{
  width: 80%;
}

.chatForm form button{
  width: 20%;
}

.findUserForm{
  width : 100%;
}

.findUserForm form{
  width : 100%;
}

.findUserForm form button{
  width : 35%;
}

.findUserForm form input{
  width : 65%;
}

.friendsWindow{
  height : 50%;
  overflow-y: scroll;
  border-bottom: thick solid #B1D9E5;
}

.groupsWindow{
  height : 50%;
  overflow-y: scroll;
  border-bottom: thick solid #B1D9E5;
}

#usersFound li {
  display: inline-block;
}

#usersFound li p{
  display: block;
}

#friends li {
  cursor: pointer;
}

.active_friend{
  background:  #B1D9E5;
}

.chat_history {
  list-style-type: none;
}

.my_message{
  float : right;
  display: block;
  clear: both;
}

.other_message{
  float : left;
  display: block;
  clear: both;
}

